[package]
name = "tweeting-stop-light"
version = "0.1.0"
authors = ["Nathan Raine <nraine18@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.8.3"
oauth1 = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
chrono = "0.4.19"
log4rs = "0.8.3"
log = "0.4.11"